client/src/components/Applications/AppForm/AppForm.scss
#appDetail-wrapper {
    /* As a flex item */
    flex-grow: 1;

    /* As a flex container */
    display: flex;
    flex-direction: row;

    /* Allow children to `overflow: scroll` but match height of this parent */
    overflow: auto;

    height: 100%; /* Be consistent with `#appDetail-error`/`.app-placeholder` (which can exist at the same location),
                     so that `appBrowser-wrapper` height does not change based on sibling content */
    padding-top: 15px;
    /* Match bottom space found in UI design at `Core Portal > Applications` */
    padding-bottom: 30px;
}

/* Overwrite Bootstrap's opinionated style */
/* ???: Is `.jumbotron` used without Design review? */
/* ???: From where does `.jumbotron` originate? */
#appDetail-wrapper .jumbotron {
    margin-bottom: 0;
}

#appForm-wrapper {
    overflow-y: scroll;
    display: flex;
    padding: 0 40px 0 30px;
    flex: 0.7 1 0;
    max-width: 780px;
    flex-direction: column;
}

.appInfo-wrapper {
    overflow-y: scroll;
    flex: 0.5 1 0;
    max-width: 400px;
    border-right: 1px solid #989898;
    padding-right: 30px;
}

.appInfo-description {
    font-size: 14px;
    padding-bottom: 20px;
}

.doc-icon {
  margin-right: 10px;
}

.appInfo-documentation {
    display: flex;
    align-items: center;
}
.appInfo-documentation .icon {
    margin-right: 0.5em;
}

.appForm-textInput label,
.appForm-select label {
    font-weight: bold;
}

.appSchema-header {
    font-weight: bold;
    padding-bottom: 10px;
    display: flex;
}

.appSchema-header span {
    border-bottom: 2px solid #989898;
    flex-grow: 1;
}

.appSchema-section {
    padding-bottom: 20px;
}

.btn-resetForm {
    padding: 5px 0 0 20px;
}

.appDetail-error {
    display: flex; /* overwrite `Message` */
    justify-content: center;
    height: 100%; /* Be consistent with `#appDetail-wrapper`/`.app-placeholder` (which can exist at the same location),
                     so that `appBrowser-wrapper` height does not change based on sibling content */
    padding: 30px;
}

